--- a/app/src/main/res/layout/menu_layout_left.xml
+++ b/app/src/main/res/layout/menu_layout_left.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_gravity="start"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <TextView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@android:color/holo_blue_dark">
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/abc_action_bar_home_description"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    </ListView>
 </LinearLayout>
