--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
 
     <dimen name="pic_list_item_height">300dp</dimen>
     <dimen name="list_item_widget_margin">10dp</dimen>
+    
+    <dimen name="menu_item_height">35dp</dimen>
 </resources>
