--- a/app/src/main/res/layout/list_picture_item.xml
+++ b/app/src/main/res/layout/list_picture_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/pic_list_item_height"
     android:layout_margin="5dp"
     android:orientation="vertical"
-    card_view:cardCornerRadius="5dp"
-    card_view:contentPadding="5dp">
+    app:cardCornerRadius="5dp"
+    app:contentPadding="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -48,7 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/date"
-            android:layout_below="@+id/author"/>
+            android:layout_below="@+id/author"
+            android:background="@color/image_view_default_background"/>
 
     </RelativeLayout>
 
