--- a/app/src/main/res/layout/fragment_recycle_view_picture_layout.xml
+++ b/app/src/main/res/layout/fragment_recycle_view_picture_layout.xml
@@ -4,7 +4,8 @@
     android:id="@+id/swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/container_layout_padding"
+    android:paddingLeft="@dimen/container_layout_padding"
+    android:paddingRight="@dimen/container_layout_padding"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
