add share feature

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
 
     <dimen name="container_layout_padding">3dp</dimen>
 
+    <dimen name="list_pic_min_height">250dp</dimen>
+    <dimen name="list_pic_max_height">300dp</dimen>
     <dimen name="pic_list_item_height">300dp</dimen>
     <dimen name="list_item_widget_margin">10dp</dimen>
 
