--- a/app/src/main/res/layout/list_picture_item.xml
+++ b/app/src/main/res/layout/list_picture_item.xml
@@ -3,69 +3,93 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/pic_list_item_height"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:orientation="vertical"
     app:cardCornerRadius="0dp"
     app:contentPadding="5dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            style="@style/Base.TextAppearance.AppCompat.Body1"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="@dimen/list_item_widget_margin"
-            android:layout_toRightOf="@id/author"
-            android:layout_alignBaseline="@id/author"
-            style="@style/Base.TextAppearance.AppCompat.Small"/>
+            <TextView
+                android:id="@+id/author"
+                style="@style/Base.TextAppearance.AppCompat.Body1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"/>
+
+            <TextView
+                android:id="@+id/date"
+                style="@style/Base.TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/author"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="@dimen/list_item_widget_margin"
+                android:layout_toRightOf="@id/author"
+                android:gravity="center_vertical"/>
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/comment_content"
+            style="@style/Base.TextAppearance.AppCompat.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/author"
-            android:layout_alignParentLeft="true"
-            style="@style/Base.TextAppearance.AppCompat.Small"/>
-
-        <TextView
-            android:id="@+id/oo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="@dimen/list_item_widget_margin"
-            style="@style/Base.TextAppearance.AppCompat.Small"/>
-
-        <TextView
-            android:id="@+id/xx"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/list_item_widget_margin"
-            android:layout_toLeftOf="@id/oo"
-            style="@style/Base.TextAppearance.AppCompat.Small"/>
+            android:gravity="center_vertical|left"/>
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@id/oo"
-            android:layout_below="@id/comment_content"
+            android:layout_centerInParent="true"
             android:background="@color/image_view_default_background"
-            app:actualImageScaleType="centerInside"/>
+            android:maxHeight="@dimen/list_pic_max_height"
+            android:minHeight="@dimen/list_pic_min_height"
+            app:actualImageScaleType="centerInside"
+            app:viewAspectRatio="1.3"/>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/oo"
+                style="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/xx"
+                style="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/share"
+                style="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/button_text_share"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
