--- a/app/src/main/res/layout/comments_activity_layout.xml
+++ b/app/src/main/res/layout/comments_activity_layout.xml
@@ -1,13 +1,8 @@
 <FrameLayout
-    android:id="@+id/drawer"
+    android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.bean.jandan.activity.MainActivity">
-
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/picture"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 </FrameLayout>
