不知道都改了点什么

--- a/app/src/main/res/layout/picture_activity_layout.xml
+++ b/app/src/main/res/layout/picture_activity_layout.xml
@@ -10,4 +10,10 @@
         android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <ImageView
+        android:id="@+id/bitmap_picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="center"/>
 </FrameLayout>
