--- a/app/src/main/res/layout/base_color_activity.xml
+++ b/app/src/main/res/layout/base_color_activity.xml
@@ -18,5 +18,6 @@
         android:id="@+id/activity_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/main_tool_bar"/>
+        android:layout_below="@id/main_tool_bar"
+        android:layout_alignWithParentIfMissing="true"/>
 </RelativeLayout>
