--- a/app/src/main/res/layout/list_picture_item.xml
+++ b/app/src/main/res/layout/list_picture_item.xml
@@ -4,10 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="0dp"
     android:orientation="vertical"
-    app:cardCornerRadius="0dp"
-    app:contentPadding="5dp">
+    app:cardCornerRadius="1dp"
+    app:contentPadding="@dimen/card_view_content_padding">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="@dimen/list_title_layout_height"
+            android:padding="@dimen/list_title_layout_padding">
 
             <TextView
                 android:id="@+id/author"
@@ -48,57 +49,78 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical|left"/>
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/picture"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="@color/image_view_default_background"
-            android:maxHeight="@dimen/list_pic_max_height"
-            android:minHeight="@dimen/list_pic_min_height"
-            app:actualImageScaleType="centerInside"
-            app:viewAspectRatio="1.3"/>
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/oo"
-                style="@style/Base.TextAppearance.AppCompat.Medium"
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/picture"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"/>
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@color/content_view_default_background"
+                android:maxHeight="@dimen/list_pic_max_height"
+                android:minHeight="@dimen/list_pic_min_height"
+                app:actualImageScaleType="centerInside"
+                app:viewAspectRatio="1"/>
 
-            <TextView
-                android:id="@+id/xx"
-                style="@style/Base.TextAppearance.AppCompat.Medium"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"/>
+                android:layout_height="@dimen/vote_layout_height"
+                android:layout_alignBottom="@id/picture"
+                android:background="@color/vote_layout_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/comments"
-                style="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/button_text_comments"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:divider="@drawable/vote_layout_divider_shape"
+                    android:showDividers="middle"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/share"
-                style="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/button_text_share"/>
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/oo"
+                        style="@style/Base.TextAppearance.AppCompat.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:drawableLeft="@drawable/ic_vote_oo"
+                        android:textColor="@color/vote_text_color"
+                        android:gravity="center"/>
+
+                    <TextView
+                        android:id="@+id/xx"
+                        style="@style/Base.TextAppearance.AppCompat.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:drawableLeft="@drawable/ic_vote_xx"
+                        android:textColor="@color/vote_text_color"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/comments"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_comment"/>
+
+                <ImageView
+                    android:id="@+id/share"
+                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_share"/>
+            </LinearLayout>
+        </RelativeLayout>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
