--- a/app/src/main/res/layout/picture_activity_layout.xml
+++ b/app/src/main/res/layout/picture_activity_layout.xml
@@ -1,6 +1,7 @@
 <FrameLayout
     android:id="@+id/drawer"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,11 +10,7 @@
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/picture"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <ImageView
-        android:id="@+id/bitmap_picture"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="center"/>
+        app:actualImageScaleType="centerInside"
+        app:viewAspectRatio="0.5"/>
 </FrameLayout>
