--- a/app/src/main/res/layout/list_pic_comment_item.xml
+++ b/app/src/main/res/layout/list_pic_comment_item.xml
@@ -2,48 +2,62 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     android:orientation="vertical"
-    app:cardCornerRadius="0dp"
-    app:contentPadding="5dp">
+    app:cardCornerRadius="@dimen/card_view_corner_radius"
+    app:contentPadding="@dimen/card_view_content_padding"
+    tools:ignore="RtlCompat">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/content_view_default_background"
         android:gravity="center"
         android:orientation="vertical">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            style="@style/AppTheme.ListTitle"
+            android:layout_height="@dimen/comment_item_title_height">
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/author_avatar"
-                android:layout_width="@dimen/abc_dropdownitem_icon_width"
-                android:layout_height="@dimen/abc_dropdownitem_icon_width"
+                android:layout_width="@dimen/comment_item_title_avatar_size"
+                android:layout_height="@dimen/comment_item_title_avatar_size"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/comment_item_title_divider_height"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/author_avatar"
+                android:background="@android:color/transparent"/>
 
             <TextView
                 android:id="@+id/author"
                 style="@style/Base.TextAppearance.AppCompat.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/author_avatar"
-                android:gravity="center_vertical"/>
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/list_title_text_height"
+                android:layout_above="@id/divider"
+                android:layout_marginStart="@dimen/list_item_widget_margin"
+                android:layout_toEndOf="@id/author_avatar"
+                android:gravity="center_vertical"
+                android:text="@string/abc_action_bar_home_description"/>
 
             <TextView
                 android:id="@+id/date"
                 style="@style/Base.TextAppearance.AppCompat.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/author"
-                android:layout_alignParentRight="true"
-                android:gravity="center_vertical"/>
-
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/list_title_text_height"
+                android:layout_alignTop="@+id/divider"
+                android:layout_marginStart="@dimen/list_item_widget_margin"
+                android:layout_toEndOf="@+id/author_avatar"
+                android:layout_toRightOf="@+id/author_avatar"
+                android:gravity="center_vertical"
+                android:text="@string/abc_activitychooserview_choose_application"/>
         </RelativeLayout>
 
         <TextView
@@ -51,8 +65,9 @@
             style="@style/Base.TextAppearance.AppCompat.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical|left"/>
-
+            android:gravity="center_vertical|left"
+            android:padding="@dimen/joke_text_padding"
+            android:textColor="@color/joke_text_color"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
