--- a/app/src/main/res/layout/list_post_item.xml
+++ b/app/src/main/res/layout/list_post_item.xml
@@ -2,44 +2,22 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     android:orientation="vertical"
-    app:cardCornerRadius="0dp"
-    app:contentPadding="5dp">
+    app:cardCornerRadius="@dimen/card_view_corner_radius"
+    app:contentPadding="@dimen/card_view_content_padding"
+    tools:ignore="RtlCompat">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/content_view_default_background">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/author"
-                style="@style/Base.TextAppearance.AppCompat.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:gravity="center_vertical"/>
-
-            <TextView
-                android:id="@+id/date"
-                style="@style/Base.TextAppearance.AppCompat.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/author"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="@dimen/list_item_widget_margin"
-                android:layout_toRightOf="@id/author"
-                android:gravity="center_vertical"/>
-
-        </RelativeLayout>
+        <include layout="@layout/list_title_layout"/>
 
         <TextView
             android:id="@+id/comment_content"
@@ -52,9 +30,6 @@
             android:id="@+id/picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="@color/content_view_default_background"
-            android:maxHeight="@dimen/list_pic_max_height"
             android:minHeight="@dimen/list_pic_min_height"
             app:actualImageScaleType="centerInside"
             app:viewAspectRatio="1.3"/>
