--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="container_layout_padding">3dp</dimen>
 
     <dimen name="card_view_content_padding">0dp</dimen>
+    <dimen name="card_view_corner_radius">1dp</dimen>
 
     <dimen name="list_pic_min_height">250dp</dimen>
     <dimen name="list_pic_max_height">300dp</dimen>
@@ -13,9 +14,17 @@
     <dimen name="vote_layout_height">30dp</dimen>
     <dimen name="vote_layout_divider_width">10dp</dimen>
     <dimen name="list_item_widget_margin">10dp</dimen>
+
     <dimen name="list_title_layout_padding">5dp</dimen>
     <dimen name="list_title_layout_height">35dp</dimen>
-    
+    <dimen name="list_title_text_height">20dp</dimen>
+
+    <dimen name="list_content_padding">5dp</dimen>
+
+    <dimen name="comment_item_title_height">50dp</dimen>
+    <dimen name="comment_item_title_avatar_size">40dp</dimen>
+    <dimen name="comment_item_title_divider_height">5dp</dimen>
+
     <dimen name="joke_text_padding">5dp</dimen>
 
     <dimen name="menu_item_height">35dp</dimen>
