--- a/app/src/main/res/layout/picture_activity_layout.xml
+++ b/app/src/main/res/layout/picture_activity_layout.xml
@@ -1,16 +1,13 @@
 <FrameLayout
     android:id="@+id/drawer"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.bean.jandan.activity.MainActivity">
 
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/picture"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:actualImageScaleType="centerInside"
-        app:viewAspectRatio="0.5"/>
+        android:layout_height="match_parent"/>
 </FrameLayout>
