--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,37 +7,51 @@
     android:layout_height="match_parent"
     tools:context="org.bean.jandan.activity.MainActivity">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-        <com.ogaclejapan.smarttablayout.SmartTabLayout
-            android:id="@+id/pager_tab_strip"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="#cc08b5d0"
-            app:stl_indicatorInFront="false"
-            app:stl_indicatorInterpolation="smart"
-            app:stl_indicatorColor="#FFFFFF"
-            app:stl_indicatorThickness="4dp"
-            app:stl_indicatorCornerRadius="2dp"
-            app:stl_underlineColor="#4D000000"
-            app:stl_underlineThickness="1dp"
-            app:stl_dividerColor="#55FFFFFF"
-            app:stl_dividerThickness="1dp"
-            app:stl_defaultTabBackground="?attr/selectableItemBackground"
-            app:stl_defaultTabTextAllCaps="true"
-            app:stl_defaultTabTextColor="#FFFFFF"
-            app:stl_defaultTabTextSize="12sp"
-            app:stl_distributeEvenly="true"
-            />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+            <com.ogaclejapan.smarttablayout.SmartTabLayout
+                android:id="@+id/pager_tab_strip"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="#cc08b5d0"
+                app:stl_indicatorInFront="false"
+                app:stl_indicatorInterpolation="smart"
+                app:stl_indicatorColor="#FFFFFF"
+                app:stl_indicatorThickness="4dp"
+                app:stl_indicatorCornerRadius="2dp"
+                app:stl_underlineColor="#4D000000"
+                app:stl_underlineThickness="1dp"
+                app:stl_dividerColor="#55FFFFFF"
+                app:stl_dividerThickness="1dp"
+                app:stl_defaultTabBackground="?attr/selectableItemBackground"
+                app:stl_defaultTabTextAllCaps="true"
+                app:stl_defaultTabTextColor="#FFFFFF"
+                app:stl_defaultTabTextSize="12sp"
+                app:stl_distributeEvenly="true"
+                />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_arrow_top"
+            app:fab_colorNormal="@color/float_button_normal"
+            app:fab_colorPressed="@color/float_button_pressed"
+            app:fab_colorRipple="@color/float_button_ripple"/>
+    </FrameLayout>
 
     <include
         layout="@layout/menu_layout_left"
