--- a/app/src/main/res/layout/picture_item_layout.xml
+++ b/app/src/main/res/layout/picture_item_layout.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.facebook.drawee.view.SimpleDraweeView
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/picture"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:actualImageScaleType="centerInside"
-    app:viewAspectRatio="0.5"/>
+    android:layout_height="match_parent">
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/picture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:actualImageScaleType="centerInside"/>
+</ScrollView>
