--- a/app/src/main/res/layout/list_post_item.xml
+++ b/app/src/main/res/layout/list_post_item.xml
@@ -24,15 +24,42 @@
             style="@style/Base.TextAppearance.AppCompat.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical|left"/>
+            android:gravity="center_vertical|start"
+            android:padding="@dimen/list_content_padding"
+            android:text="@string/abc_action_bar_home_description"/>
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/picture"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="@dimen/list_pic_min_height"
-            app:actualImageScaleType="centerInside"
-            app:viewAspectRatio="1.3"/>
+            android:layout_height="wrap_content">
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/picture"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:minHeight="@dimen/list_pic_min_height"
+                app:actualImageScaleType="centerInside"
+                app:viewAspectRatio="1"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/vote_layout_height"
+                android:layout_alignBottom="@id/picture"
+                android:background="@color/vote_layout_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/share"
+                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_share"/>
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
